# evolution-pkcs11

./: AUTHORS  Makefile  Makefile.am  Makefile.in  README.md  config.h.in  configure  configure.ac  pkcs11.c  pkcs11.h  test.c
src/: Makefile.am  Makefile.in  object.c  object.h  pkcs11.c  pkcs11.h  session.c  session.h  util.c  util.h
test/: Makefile.am  Makefile.in  addressbook-access-test.c  test-app.c  test-attribute-value.c  test-search.c  test-session.c  test.c
